<resources>
    <string name="app_name">Protein Counter</string>
    <string name="enter_entry_title">Food Name</string>
    <string name="write_entry">Protein Amount (g)</string>
    <string name="add">Add</string>
    <string name="error_food_name_required">Food name is required</string>
    <string name="error_food_name_too_long">Food name must be 100 characters or less</string>
    <string name="error_protein_invalid_number">Enter a valid number</string>
    <string name="error_protein_not_positive">Protein amount must be greater than 0</string>
    <string name="error_protein_too_large">Protein amount must be 1000g or less</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry_title">Delete entry?</string>
    <string name="delete_entry_message">Delete \"%1$s\"? This cannot be undone.</string>
    <string name="search_hint">Search by food name</string>
    <string name="no_matching_entries">No matching entries found</string>
    <string name="report_title">Food Log Report</string>
    <string name="report_generated_label">Generated: %1$s</string>
    <string name="report_column_food_name">Food Name</string>
    <string name="report_column_protein_amount">Protein (g)</string>
    <string name="no_entries_for_report">No entries yet. Add a food entry to generate a report.</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="switch_to_register">Need an account? Register</string>
    <string name="switch_to_sign_in">Have an account? Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password (min 6 characters)</string>
    <string name="sign_out">Sign Out</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Enter a valid email address</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>
    <string name="error_invalid_credentials">Incorrect email or password</string>
    <string name="error_email_in_use">An account with this email already exists</string>
    <string name="error_account_disabled">This account has been disabled</string>
    <string name="error_network">Network error. Check your connection and try again.</string>
    <string name="error_auth_generic">Something went wrong. Please try again.</string>
    <string name="error_not_signed_in">You\'re not signed in. Please sign in again.</string>
    <string name="error_loading_entries">Couldn\'t load your entries. Check your connection and try again.</string>
    <string name="error_delete_failed">Couldn\'t delete this entry: %1$s</string>
    <string name="error_save_failed">Couldn\'t save this entry: %1$s</string>
    <string name="syncing_changes">Syncing changes…</string>
</resources>